--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         html, body {
             height: 100%;
             background: #000;
-            color: #fff;
+            color: #888;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
         }
 
@@ -29,20 +29,9 @@
             font-weight: 300;
             letter-spacing: 0.1em;
         }
-
-        .dots::after {
-            content: '';
-            animation: dots 1.5s steps(1) infinite;
-        }
-
-        @keyframes dots {
-            0%, 25% { content: '.'; }
-            25%, 50% { content: '..'; }
-            50%, 100% { content: '...'; }
-        }
     </style>
 </head>
 <body>
-    <p class="text">coming soon<span class="dots"></span></p>
+    <p class="text">coming soon</p>
 </body>
 </html>
